Added documentation for class methods

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "battlesimulator-tradecore",
   "version": "1.0.0",
   "description": "",
-  "main": "army.js",
+  "main": "battleSimulator.js",
   "directories": {
     "test": "tests"
   },
